--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     height: 600px;
     background-position: center;
     background-size:cover;
-    background-image:url(/portpolio/1720840063606~2\ \(1\).jpg) ;
+    background-image:url(../1720840063606~2\ \(1\).jpg) ;
     background-repeat: no-repeat;
     position: relative;
     overflow: hidden;
